[package]
name = "hellow_world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
itertools = "0.12"
meval = "0.2"
ordered-float = "4.6"
rayon = "1.10"
csv = "1.3"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
